// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPasswordPage should match invalid token message section snapshot 1`] = `
<div
  className="d-flex justify-content-center reset-password-container"
>
  <div
    className="d-flex flex-column"
    style={
      Object {
        "width": "400px",
      }
    }
  >
    <div
      className="form-group"
    >
      <div
        className="text-center mt-3"
      >
        <div
          className="alert d-flex align-items-start alert-danger mt-n2"
        >
          <div />
          <div>
            <h4
              style={
                Object {
                  "color": "#a0050e",
                }
              }
            >
              <span>
                Invalid Password Reset Link
              </span>
            </h4>
            <span>
              This password reset link is invalid. It may have been used already. To reset your password, go to the 
              <a
                href="/login"
                onClick={[Function]}
                target="_self"
              >
                <span>
                  sign-in
                </span>
              </a>
               page and select 
              <strong>
                Forgot Password
              </strong>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResetPasswordPage should match reset password default section snapshot 1`] = `
<div
  className="d-flex justify-content-center reset-password-container"
>
  <div
    className="d-flex flex-column"
    style={
      Object {
        "width": "450px",
      }
    }
  >
    <form
      className="m-4"
    >
      <div
        className="form-group"
      >
        <h3
          className="text-center mt-3"
        >
          Reset Your Password
        </h3>
        <p
          className="mb-4"
        >
          Enter and confirm your new password.
        </p>
        <div
          className="d-flex flex-column align-items-start"
        >
          <div
            className="form-group"
          >
            <label
              className="h6 mr-1"
              htmlFor="reset-password-input"
            >
              New Password
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="reset-password-input"
              name="new-password1"
              onBlur={[Function]}
              placeholder=""
              style={
                Object {
                  "width": "400px",
                }
              }
              type="password"
            />
          </div>
          <div
            className="form-group"
          >
            <label
              className="h6 mr-1"
              htmlFor="confirm-password-input"
            >
              Confirm Password
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="confirm-password-input"
              name="new-password2"
              onChange={[Function]}
              placeholder=""
              style={
                Object {
                  "width": "400px",
                }
              }
              type="password"
              value=""
            />
            <strong
              className="invalid-feedback"
              id="confirm-password-input-invalid-feedback"
            >
              Passwords do not match.
            </strong>
          </div>
        </div>
      </div>
      <button
        className="btn btn-primary submit"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        Reset my password
      </button>
    </form>
  </div>
</div>
`;

exports[`ResetPasswordPage should match successful reset message section snapshot 1`] = `
<div
  className="d-flex justify-content-center reset-password-container"
>
  <div
    className="d-flex flex-column"
    style={
      Object {
        "width": "400px",
      }
    }
  >
    <div
      className="form-group"
    >
      <div
        className="text-center mt-3"
      >
        <div
          className="alert d-flex align-items-start alert-warning mt-n2"
        >
          <div />
          <div>
            <h4
              style={
                Object {
                  "color": "green",
                }
              }
            >
              <span>
                Password Reset Complete.
              </span>
            </h4>
            <span>
              Your password has been reset. 
              <a
                href="/login"
                onClick={[Function]}
                target="_self"
              >
                <span>
                  Sign-in
                </span>
              </a>
               to your account.
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResetPasswordPage should match unsuccessful reset message section snapshot 1`] = `
Array [
  <div
    className="d-flex justify-content-center reset-password-container"
  >
    <div
      className="d-flex flex-column"
      style={
        Object {
          "width": "400px",
        }
      }
    >
      <div
        className="form-group"
      >
        <div
          className="text-center mt-3"
        >
          <div
            className="alert d-flex align-items-start alert-danger mt-n2"
          >
            <div />
            <div>
              <div
                style={
                  Object {
                    "color": "#a0050e",
                  }
                }
              >
                <span>
                  Password reset was unsuccessfull. 
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="d-flex justify-content-center reset-password-container"
  >
    <div
      className="d-flex flex-column"
      style={
        Object {
          "width": "450px",
        }
      }
    >
      <form
        className="m-4"
      >
        <div
          className="form-group"
        >
          <h3
            className="text-center mt-3"
          >
            Reset Your Password
          </h3>
          <p
            className="mb-4"
          >
            Enter and confirm your new password.
          </p>
          <div
            className="d-flex flex-column align-items-start"
          >
            <div
              className="form-group"
            >
              <label
                className="h6 mr-1"
                htmlFor="reset-password-input"
              >
                New Password
              </label>
              <input
                aria-describedby=""
                className="form-control"
                id="reset-password-input"
                name="new-password1"
                onBlur={[Function]}
                placeholder=""
                style={
                  Object {
                    "width": "400px",
                  }
                }
                type="password"
              />
            </div>
            <div
              className="form-group"
            >
              <label
                className="h6 mr-1"
                htmlFor="confirm-password-input"
              >
                Confirm Password
              </label>
              <input
                aria-describedby=""
                className="form-control"
                id="confirm-password-input"
                name="new-password2"
                onChange={[Function]}
                placeholder=""
                style={
                  Object {
                    "width": "400px",
                  }
                }
                type="password"
                value=""
              />
              <strong
                className="invalid-feedback"
                id="confirm-password-input-invalid-feedback"
              >
                Passwords do not match.
              </strong>
            </div>
          </div>
        </div>
        <button
          className="btn btn-primary submit"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          Reset my password
        </button>
      </form>
    </div>
  </div>,
]
`;
